objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <description>If checked, the Product and PricebookEntry are active and they are not archived.</description>
        <formula>AND(PricebookEntry.IsActive, PricebookEntry.Product2.IsActive, NOT(PricebookEntry.IsArchived), NOT(PricebookEntry.Product2.IsArchived))</formula>
        <inlineHelpText>If checked, the Product and PricebookEntry are active and they are not archived.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Product_Name__c</fullName>
        <formula>PricebookEntry.Product2.Actual_Product_Name__c</formula>
        <label>Actual Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Discounted__c</fullName>
        <description>The amount that an item is discounted</description>
        <formula>(ListPrice - UnitPrice)* Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Discounted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CW_Color__c</fullName>
        <formula>PricebookEntry.Product2.CW_Color__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CW Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CW_Item_Description__c</fullName>
        <formula>PricebookEntry.Product2.CW_Item_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CW Item Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CW_Size__c</fullName>
        <formula>PricebookEntry.Product2.CW_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CW Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_SPO_Amount__c</fullName>
        <formula>IF( ISPICKVAL(Fulfillment_Method__c,&quot;Contract SPO&quot;), (Quantity * UnitPrice),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract SPO Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Location__c</fullName>
        <label>Customer Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Spec__c</fullName>
        <label>Customer Spec #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMSSku__c</fullName>
        <formula>PricebookEntry.Product2.DMMSSku__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DMMSSku</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Expected Delivery Date</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>Product_Name__c  &amp; &quot; &quot;&amp; DMMSSku__c &amp;&quot; &quot;&amp; CW_Color__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Current_Price__c</fullName>
        <formula>PricebookEntry.Product2.Direct_Current_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Current Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <description>to be used in new visual force opportunity line item</description>
        <label>Discount Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drop_Ship_Amount__c</fullName>
        <formula>IF( ISPICKVAL(Fulfillment_Method__c,&quot;Drop Ship&quot;), (Quantity * UnitPrice),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drop Ship Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ELC__c</fullName>
        <formula>PricebookEntry.Product2.ELC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ELC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Delivery_Date__c</fullName>
        <label>Est. Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Customer_Delivery_Date__c</fullName>
        <description>New standardized field to utilize pick values.  Deleting previous Expected Delivery Date field, which was open text &amp; subject to interpretation. LALO 022110</description>
        <label>Expected Customer Delivery Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-2 days</fullName>
                </value>
                <value>
                    <fullName>3-7 days</fullName>
                </value>
                <value>
                    <fullName>7-10 days</fullName>
                </value>
                <value>
                    <fullName>1-2 weeks</fullName>
                </value>
                <value>
                    <fullName>2-3 Weeks</fullName>
                </value>
                <value>
                    <fullName>3-4 Weeks</fullName>
                </value>
                <value>
                    <fullName>4-6 Weeks</fullName>
                </value>
                <value>
                    <fullName>45-60 days</fullName>
                </value>
                <value>
                    <fullName>120-150 days</fullName>
                </value>
                <value>
                    <fullName>Est. to Ship TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fulfillment_Method__c</fullName>
        <inlineHelpText>Choose a method for each line item.</inlineHelpText>
        <label>Fulfillment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COM/COL</fullName>
                    <color>#990000</color>
                    <label>COM/COL</label>
                </value>
                <value>
                    <fullName>Contract Inventory</fullName>
                    <color>#CC0000</color>
                    <label>Contract Inventory</label>
                </value>
                <value>
                    <fullName>Contract SPO</fullName>
                    <color>#FF0000</color>
                    <label>Contract SPO</label>
                </value>
                <value>
                    <fullName>Custom</fullName>
                    <color>#993300</color>
                    <label>Custom</label>
                </value>
                <value>
                    <fullName>Drop Ship</fullName>
                    <color>#FF6666</color>
                    <label>Drop Ship</label>
                </value>
                <value>
                    <fullName>Retail Inventory</fullName>
                    <color>#333333</color>
                    <default>true</default>
                    <label>Retail Inventory</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Landed_Cost__c</fullName>
        <inlineHelpText>added 110609 to assist in margin calculation. LL/MT</inlineHelpText>
        <label>Landed Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_Item_Total_List_Price__c</fullName>
        <formula>Unit_Price__c * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Item Total List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_Item_Total_Price__c</fullName>
        <formula>UnitPrice * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Item Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manual_Distro_info__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Enter for each line item requiring Manual Distro as such:
Warehouse &gt; (Trade) Store, Distro# - EX) 97&gt;651, #12345</inlineHelpText>
        <label>Manual Distro info</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <description>to be used in the new visual force page for line item pricing</description>
        <label>Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_Price__c</fullName>
        <formula>PricebookEntry.Product2.Member_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id,  Quote_Product_Name__c, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Discounted__c</fullName>
        <description>The percentage discount for a line item.</description>
        <formula>( ListPrice -  UnitPrice )/ ListPrice</formula>
        <label>Percent Discounted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Price_Diff__c</fullName>
        <formula>ListPrice - UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Diff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Margin__c</fullName>
        <formula>(UnitPrice - PricebookEntry.Product2.ELC__c )/UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>IF(ISBLANK(PricebookEntry.Product2.Actual_Product_Name__c), HYPERLINK(&quot;/&quot; &amp; PricebookEntry.Product2Id, PricebookEntry.Product2.Name, &quot;_self&quot;), HYPERLINK(&quot;/&quot; &amp; PricebookEntry.Product2Id, PricebookEntry.Product2.Actual_Product_Name__c, &quot;_self&quot;))</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Ship_Via__c</fullName>
        <formula>PricebookEntry.Product2.SKU_Ship_Via__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Ship Via</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Product_Name__c</fullName>
        <formula>PricebookEntry.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requires_Handling_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Handling Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_test__c</fullName>
        <label>SFDC_test</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_del__c</fullName>
        <description>The SKU of the specific item ordered.</description>
        <label>SKU</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SideMark__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Enter SM by line item, if necessary</inlineHelpText>
        <label>SideMark</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SyncedQuoteId__c</fullName>
        <formula>Opportunity.SyncedQuote.Id</formula>
        <label>SyncedQuoteId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_ELC__c</fullName>
        <formula>ELC__c * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total ELC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unique_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <description>to be populated with a field update from the Product object so that the Roll-up summary field works on the Opportunity</description>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Update_ELC_total__c</fullName>
        <label>Update ELC total</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <validationRules>
        <fullName>Fulfillment_Method_Mandatory</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(Fulfillment_Method__c,&quot;&quot;)</errorConditionFormula>
        <errorMessage>Please enter &quot;Fulfillment Method&quot; for all Products on this Opp before proceeding.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SKU_field_equals_DMMS_sku_of_line_item</fullName>
        <active>true</active>
        <description>attempt to lookup dmms sku to oppty product object. 050710LALO</description>
        <errorConditionFormula>SKU_del__c = PricebookEntry.Product2.DMMSSku__c</errorConditionFormula>
        <errorDisplayField>SKU_del__c</errorDisplayField>
        <errorMessage>verify sku info</errorMessage>
    </validationRules>
</CustomObject>